2011-01-24  Per Bothner  <per@bothner.com>

	* CompileInvoke.java (validateApplyInvoke): Report error if
	invoke-special on unknown or invalid type.

2011-01-19  Per Bothner  <per@bothner.com>

	* ClassMethods.java: Update isValidJavaName call.

2011-01-07  Per Bothner  <per@bothner.com>

	* CompileInvoke.java (validateApplyInvoke): Guard against
	Array.set failures.

	* MakeAnnotation.java (asAnnotationValue): Handle nested annotation
	value.

2011-01-03  Per Bothner  <per@bothner.com>

	* CompileInvoke.java (validateApplyInvoke): Add special handling
	for LangObjType.constVectorType, including coercion to array and List.

2010-12-24  Per Bothner  <per@bothner.com>

	* MakeAnnotation.java (validate): Fix SourceLocator used for
	unknown annotation element name error message.

	* MakeAnnotation.java: New class, extends ProcedureN.
	* Makefile.am: Update accordingly.
	* CompileInvoke.java (validateApplyInvoke): Constant-fold array
	construction if processingAnnotations().

2010-12-23  Per Bothner  <per@bothner.com>

	* CompileReflect.java (validateApplySlotGet): Inline access to enum
	constant to constant enum value.
	Also inline reference to member class.

2010-11-26  Per Bothner  <per@bothner.com>

	* CompileInvoke.java (validateApplyInvoke): Fix some errors in
	resolution of constructor calls.

2010-11-04  Per Bothner  <per@bothner.com>

	* CompileInvoke.java: Update to use new warnInvokeUnknownMethod
	from Compilation.
	* SlotSet.java (compile): Check Compilation#warnUnknownMember.
	* CompileRefect.java (validateApplySlotGet): Likewise.
	* CompileNamedPart.java (validateGetNamedPart): Likewise.

	* SlotGet.java (compile): Generalize to ObjectType.

2010-10-23  Per Bothner  <per@bothner.com>

	* SlotGet.java (compile): Simplify using Language#getLangTypeFor.
	* CompileReflect.java (checkKnownClass): Cast is no longer needed.

2010-10-22  Per Bothner  <per@bothner.com>

	* CompileInvoke.java (validateApplyInvoke): Allow constructor